--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="header">
-        <h1>tailwind calculator</h1>
+        <h1>calculator</h1>
 
         <!-- <h1 id="heading">Calculator</h1> -->
         <div class="calculator">
